--- a/gtk/models/notebook.glade
+++ b/gtk/models/notebook.glade
@@ -25,32 +25,36 @@
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">NOTA</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 11"/>
                   <attribute name="weight" value="ultrabold"/>
                   <attribute name="underline" value="True"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">235</property>
+                <property name="x">240</property>
                 <property name="y">15</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel">
                 <property name="name">enc_label1</property>
-                <property name="width-request">100</property>
+                <property name="width-request">430</property>
                 <property name="height-request">80</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes"> Para poder encriptar un archivo, necesitas la ruta. Una vez se finalize el 
 proceso de encriptacion, la clave AES se generará en el mismo directorio
-					    que  el archivo a encriptar.</property>
+que  el archivo a encriptar.</property>
+                <property name="justify">center</property>
+                <property name="wrap">True</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="style" value="italic"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">45</property>
-                <property name="y">30</property>
+                <property name="x">50</property>
+                <property name="y">25</property>
               </packing>
             </child>
             <child>
@@ -73,12 +77,14 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Ruta del archivo a encriptar:</property>
+                <property name="justify">center</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="weight" value="bold"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">165</property>
+                <property name="x">169</property>
                 <property name="y">137</property>
               </packing>
             </child>
@@ -90,7 +96,7 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="title" translatable="yes"/>
               </object>
               <packing>
-                <property name="x">160</property>
+                <property name="x">165</property>
                 <property name="y">164</property>
               </packing>
             </child>
@@ -116,30 +122,33 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Ruta del archivo a desencriptar: </property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="weight" value="bold"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">30</property>
+                <property name="x">50</property>
                 <property name="y">130</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="dec_label1">
-                <property name="width-request">100</property>
+                <property name="width-request">450</property>
                 <property name="height-request">96</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Para desencriptar un archivo necesitas la ruta del archivo y la ruta de la clave
-     con la que se encriptó del archivo. Si intentas desencriptar un archivo no 
-                                  encriptado, lo perderás para siempre.</property>
+con la que se encriptó del archivo. Si intentas desencriptar un archivo no 
+encriptado, lo perderás para siempre.</property>
+                <property name="justify">center</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="style" value="italic"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">20</property>
-                <property name="y">20</property>
+                <property name="x">40</property>
+                <property name="y">18</property>
               </packing>
             </child>
             <child>
@@ -148,12 +157,13 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">NOTA</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 11"/>
                   <attribute name="weight" value="ultrabold"/>
                   <attribute name="underline" value="True"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">245</property>
+                <property name="x">240</property>
                 <property name="y">15</property>
               </packing>
             </child>
@@ -163,25 +173,26 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Ruta de la clave AES:</property>
                 <attributes>
+                  <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="weight" value="bold"/>
                 </attributes>
               </object>
               <packing>
-                <property name="x">105</property>
+                <property name="x">127</property>
                 <property name="y">185</property>
               </packing>
             </child>
             <child>
               <object class="GtkButton" id="dec_button3">
                 <property name="label" translatable="yes">Confirmar Operación</property>
-                <property name="width-request">490</property>
+                <property name="width-request">495</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
               <packing>
                 <property name="x">20</property>
-                <property name="y">235</property>
+                <property name="y">240</property>
               </packing>
             </child>
             <child>
@@ -192,7 +203,7 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="title" translatable="yes"/>
               </object>
               <packing>
-                <property name="x">260</property>
+                <property name="x">278</property>
                 <property name="y">121</property>
               </packing>
             </child>
@@ -204,7 +215,7 @@ proceso de encriptacion, la clave AES se generará en el mismo directorio
                 <property name="title" translatable="yes"/>
               </object>
               <packing>
-                <property name="x">260</property>
+                <property name="x">278</property>
                 <property name="y">175</property>
               </packing>
             </child>
