--- a/gtk/models/confirm.glade
+++ b/gtk/models/confirm.glade
@@ -22,6 +22,9 @@
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">¿Estás seguro de que quieres continuar?</property>
+            <attributes>
+              <attribute name="font-desc" value="Sans 10"/>
+            </attributes>
           </object>
           <packing>
             <property name="x">20</property>
