--- a/gtk/models/notebook.glade
+++ b/gtk/models/notebook.glade
@@ -62,6 +62,7 @@ que  el archivo a encriptar.</property>
                 <property name="label" translatable="yes">Confirmar Operación</property>
                 <property name="name">enc_button1</property>
                 <property name="width-request">495</property>
+                <property name="height-request">34</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -80,7 +81,10 @@ que  el archivo a encriptar.</property>
                 <property name="justify">center</property>
                 <attributes>
                   <attribute name="font-desc" value="Sans 10"/>
+                  <attribute name="style" value="normal"/>
                   <attribute name="weight" value="bold"/>
+                  <attribute name="variant" value="normal"/>
+                  <attribute name="stretch" value="normal"/>
                 </attributes>
               </object>
               <packing>
@@ -91,6 +95,7 @@ que  el archivo a encriptar.</property>
             <child>
               <object class="GtkFileChooserButton" id="enc_selector">
                 <property name="width-request">196</property>
+                <property name="height-request">34</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="title" translatable="yes"/>
@@ -186,6 +191,7 @@ encriptado, lo perderás para siempre.</property>
               <object class="GtkButton" id="dec_button3">
                 <property name="label" translatable="yes">Confirmar Operación</property>
                 <property name="width-request">495</property>
+                <property name="height-request">34</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
@@ -198,6 +204,7 @@ encriptado, lo perderás para siempre.</property>
             <child>
               <object class="GtkFileChooserButton">
                 <property name="width-request">196</property>
+                <property name="height-request">34</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="title" translatable="yes"/>
@@ -210,6 +217,7 @@ encriptado, lo perderás para siempre.</property>
             <child>
               <object class="GtkFileChooserButton">
                 <property name="width-request">196</property>
+                <property name="height-request">34</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="title" translatable="yes"/>
