--- a/gtk/models/progress.glade
+++ b/gtk/models/progress.glade
@@ -5,8 +5,10 @@
   <object class="GtkWindow" id="window">
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">AES Encryption</property>
+    <property name="resizable">False</property>
     <property name="default-width">420</property>
     <property name="default-height">100</property>
+    <property name="urgency-hint">True</property>
     <child>
       <object class="GtkFixed">
         <property name="visible">True</property>
