--- a/gtk/models/notebook.glade
+++ b/gtk/models/notebook.glade
@@ -129,6 +129,7 @@ que  el archivo a encriptar.</property>
                 <property name="can-focus">False</property>
                 <property name="label" translatable="yes">Ruta del archivo a desencriptar: </property>
                 <property name="justify">right</property>
+                <property name="xalign">1</property>
                 <attributes>
                   <attribute name="font-desc" value="Sans 10"/>
                   <attribute name="weight" value="bold"/>
