Terminar funciones frame principal

--- a/gtk/models/notebook.glade
+++ b/gtk/models/notebook.glade
@@ -64,6 +64,7 @@ que  el archivo a encriptar.</property>
                 <property name="width-request">495</property>
                 <property name="height-request">34</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
@@ -199,6 +200,7 @@ encriptado, lo perderás para siempre.</property>
                 <property name="width-request">495</property>
                 <property name="height-request">34</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
               </object>
