--- a/gtk/models/finish.glade
+++ b/gtk/models/finish.glade
@@ -10,7 +10,7 @@
     <property name="default-height">120</property>
     <property name="urgency-hint">True</property>
     <child>
-      <object class="GtkFixed">
+      <object class="GtkFixed" id="grid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <child>
@@ -28,7 +28,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="button0">
+          <object class="GtkButton" id="button">
             <property name="label" translatable="yes">Terminar</property>
             <property name="related-action"/>
             <property name="visible">True</property>
