--- a/gtk/models/confirm.glade
+++ b/gtk/models/confirm.glade
@@ -7,6 +7,7 @@
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
+    <property name="window-position">center</property>
     <property name="default-width">420</property>
     <property name="default-height">115</property>
     <property name="destroy-with-parent">True</property>
