--- a/gtk/models/error.glade
+++ b/gtk/models/error.glade
@@ -6,15 +6,19 @@
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
+    <property name="modal">True</property>
     <property name="default-width">400</property>
     <property name="default-height">120</property>
+    <property name="destroy-with-parent">True</property>
+    <property name="icon-name">dialog-error</property>
+    <property name="type-hint">dialog</property>
     <property name="urgency-hint">True</property>
     <child>
-      <object class="GtkFixed">
+      <object class="GtkFixed" id="grid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <child>
-          <object class="GtkLabel" id="label0">
+          <object class="GtkLabel" id="label">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">Ha habido un fallo en la ejecución  inesperado.</property>
@@ -28,7 +32,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="button0">
+          <object class="GtkButton" id="button">
             <property name="label" translatable="yes">Terminar</property>
             <property name="visible">True</property>
             <property name="can-focus">True</property>
