--- a/gtk/models/finish.glade
+++ b/gtk/models/finish.glade
@@ -6,15 +6,19 @@
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
+    <property name="modal">True</property>
     <property name="default-width">400</property>
     <property name="default-height">120</property>
+    <property name="destroy-with-parent">True</property>
+    <property name="icon-name">dialog-information</property>
+    <property name="type-hint">dialog</property>
     <property name="urgency-hint">True</property>
     <child>
       <object class="GtkFixed" id="grid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <child>
-          <object class="GtkLabel" id="label0">
+          <object class="GtkLabel" id="label">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">La operación se ha completado correctamente.</property>
@@ -23,7 +27,7 @@
             </attributes>
           </object>
           <packing>
-            <property name="x">80</property>
+            <property name="x">45</property>
             <property name="y">20</property>
           </packing>
         </child>
