--- a/gtk/models/notebook.glade
+++ b/gtk/models/notebook.glade
@@ -6,8 +6,10 @@
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
+    <property name="window-position">center</property>
     <property name="default-width">535</property>
     <property name="default-height">330</property>
+    <property name="icon-name">applications-engineering</property>
     <property name="urgency-hint">True</property>
     <child>
       <object class="GtkNotebook" id="notebook">
