--- a/gtk/models/progress.glade
+++ b/gtk/models/progress.glade
@@ -6,44 +6,28 @@
     <property name="can-focus">False</property>
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
+    <property name="modal">True</property>
+    <property name="window-position">center</property>
     <property name="default-width">420</property>
     <property name="default-height">100</property>
+    <property name="destroy-with-parent">True</property>
+    <property name="icon-name">dialog-information</property>
+    <property name="type-hint">dialog</property>
     <property name="urgency-hint">True</property>
+    <property name="deletable">False</property>
     <child>
       <object class="GtkFixed">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <child>
-          <object class="GtkProgressBar" id="bar">
-            <property name="width-request">340</property>
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-          </object>
-          <packing>
-            <property name="x">20</property>
-            <property name="y">56</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkLabel" id="label0">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="label" translatable="yes">Espere hasta que la operación se complete.</property>
+            <property name="label" translatable="yes">Espere hasta que la operación se complete...</property>
           </object>
           <packing>
-            <property name="x">20</property>
+            <property name="x">55</property>
             <property name="y">19</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel" id="label1">
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="label" translatable="yes">0%</property>
-          </object>
-          <packing>
-            <property name="x">371</property>
-            <property name="y">50</property>
           </packing>
         </child>
       </object>
