--- a/gtk/models/finish.glade
+++ b/gtk/models/finish.glade
@@ -7,6 +7,7 @@
     <property name="title" translatable="yes">AES Encryption</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
+    <property name="window-position">center</property>
     <property name="default-width">400</property>
     <property name="default-height">120</property>
     <property name="destroy-with-parent">True</property>
@@ -22,12 +23,9 @@
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="label" translatable="yes">La operación se ha completado correctamente.</property>
-            <attributes>
-              <attribute name="font-desc" value="Sans 10"/>
-            </attributes>
           </object>
           <packing>
-            <property name="x">45</property>
+            <property name="x">50</property>
             <property name="y">20</property>
           </packing>
         </child>
